--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </br></br><h class="hnje">  KETU DO TE GJENI ME TE REJAT E KOMPANISE PROSIG.</h>
     </div>
     <div class="container1" align="left">
-        <table bgcolor: black; class="tabela" style="margin-left:-20px;"> 
+        <table bgcolor: #33302e; class="tabela" style="margin-left:-20px;"> 
             <td style="padding: 1px;">
                 <div class="gallery" style=" width: 400px ; height :500px;">
                    <img src="foto/home.jpg" style="outline: 2px #999595 solid;">
