--- a/animacionet.html
+++ b/animacionet.html
@@ -127,6 +127,23 @@
       <p style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo është logo e twitter-ut" style="float: left;">Këtu klikoni për të hyrë në twitter</p>
      <div id="paraqit">Klikoni per te rreshqitur posht kete panel</div>
      <div id="paneli">PROSIG</div>
+             <br>
+            <div style="height: 70px;width:1330px;position:absolute;margin-left: 10px;background-color:whitesmoke;border: dotted black 1px;">
+            <div id="animate_div" style="height: 70px;width:70px;position:absolute;margin-left: 0px;background-color: black;">
+            </div>
+            </div>
+     <br /><br><br><br>
+            <button id="move_left" style="margin-left:20px;margin-top:5px;background-color: black;color:white;">Move!</button>
+            <script>
+                $(document).ready(function(){
+                   $("#move_left").click(function(){
+                                $("#animate_div").animate({height: '70px', opacity: '0.4'}, 1000);
+                                $("#animate_div").animate({width: '1330px', opacity: '1'}, "fast");
+                                $("#animate_div").animate({height: '70px', opacity: '0.4'}, 1000);
+                                $("#animate_div").animate({width: '70px', opacity: '1'}, 3000);
+                   }); 
+                });
+            </script>
     </body>
     <script>
 var x = document.getElementById("demo");
