--- a/faqet-tjera/shpallje.html
+++ b/faqet-tjera/shpallje.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="shpallje.appcache">
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="shpallje.css">
