--- a/kontakti.html
+++ b/kontakti.html
@@ -157,10 +157,14 @@
 <script>
 $(document).ready(function(){
   $("#hide").click(function(){
-    $("#hideshow").hide();
+    $("#hideshow").hide("slow", function(){
+      alert("Permbajtja u fshi");
+    });
   });
   $("#show").click(function(){
-    $("pre").show();
+    $("pre").show("slow", function(){
+      alert("Permbajtja u shtua!");
+    });
   });
 });
 </script>
