--- a/lexo2.html
+++ b/lexo2.html
@@ -5,6 +5,20 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="lexo2.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script>
+function clickCounter() {
+  if (typeof(Storage) !== "undefined") {
+    if (sessionStorage.clickcount) {
+      sessionStorage.clickcount = Number(sessionStorage.clickcount)+1;
+    } else {
+      sessionStorage.clickcount = 1;
+    }
+    document.getElementById("result").innerHTML = "" + sessionStorage.clickcount + "";
+  } else {
+    document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
+  }
+}
+</script>
   
 </head>         
 
@@ -61,7 +75,8 @@ Kjo është shuma që ju e paguani vet (pjesëmarrja juaj në dëm) në rast të
   <li>Mbarë bota duke përjashtuar USA-në dhe Kanadan</li>
   <li>Mbarë bota (Udhëtimi mbulohet në të gjithë botën)</li>
 </ol>
-
+<p><button onclick="clickCounter()" type="button">Click me</button></p>
+<div id="result"></div>
 </p>
                 </div></div>
         </div>
