--- a/kontakti.html
+++ b/kontakti.html
@@ -167,5 +167,10 @@ $(document).ready(function(){
     });
   });
 });
+  $(document).ready(function(){
+    $("h3").click(function(){
+     $(this).hide();
+  });
+});
 </script>
 </html>
