--- a/animacionet.html
+++ b/animacionet.html
@@ -71,7 +71,7 @@
   <img src="foto/mapg.png" width="500" height="300" draggable="true" ondragstart="drag(event)" id="drag1"></div><br />
   <br>
   
-  <h3 style="text-align:center">Fakte te rendesishme rreth nesh!</h3>
+  <h3 style="text-align:center">Fakte t&euml; rend&euml;sishme rreth nesh!</h3>
   <div class="divcss3">
             Kompania e Sigurimeve "PROSIG" &euml;sht&euml; themeluar n&euml; mars t&euml; vitit 2010.
             Periudha e dyt&euml; tremujore e vitit 2010 ka qen&euml; periudha fillestare 
@@ -123,8 +123,8 @@
           </ul>
       </li>
    </ul>
-        <p style="width: 300px;"><img src="foto/facebook_32.png" alt="Kjo është logo e facebook-ut" style="float: right;">Këtu klikoni për të hyrë në facebbok</p>
-      <p style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo është logo e twitter-ut" style="float: left;">Këtu klikoni për të hyrë në twitter</p>
+        <p style="width: 300px;"><img src="foto/facebook_32.png" alt="Kjo &euml;sht&euml; logo e facebook-ut" style="float: right;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; facebbok</p>
+      <p style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo &euml;sht&euml; logo e twitter-ut" style="float: left;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; twitter</p>
      <div id="paraqit">Klikoni per te rreshqitur posht kete panel</div>
      <div id="paneli">PROSIG</div>
              <br>
