--- a/animacionet.html
+++ b/animacionet.html
@@ -124,8 +124,16 @@
       </li>
    </ul>
         <p style="width: 300px;"><img src="foto/facebook_32.png" alt="Kjo &euml;sht&euml; logo e facebook-ut" style="float: right;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; facebbok</p>
-      <p style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo &euml;sht&euml; logo e twitter-ut" style="float: left;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; twitter</p>
-     <div id="paraqit">Klikoni per te rreshqitur posht kete panel</div>
+      <p id="test1" style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo &euml;sht&euml; logo e twitter-ut" style="float: left;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; twitter</p>
+      <button id="btn1">Set Text</button>
+      <script>
+$(document).ready(function(){
+  $("#btn1").click(function(){
+    $("#test1").text("Permbajtja e tesktit u ndryshua");
+  });
+});
+      </script>
+      <div id="paraqit">Klikoni per te rreshqitur posht kete panel</div>
      <div id="paneli">PROSIG</div>
              <br>
             <div style="height: 70px;width:1330px;position:absolute;margin-left: 10px;background-color:whitesmoke;border: dotted black 1px;">
