--- a/animacionet.html
+++ b/animacionet.html
@@ -123,15 +123,31 @@
           </ul>
       </li>
    </ul>
-        <p style="width: 300px;"><img src="foto/facebook_32.png" alt="Kjo &euml;sht&euml; logo e facebook-ut" style="float: right;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; facebbok</p>
+        <p class="gjej" style="width: 300px;"><img src="foto/facebook_32.png" alt="Kjo &euml;sht&euml; logo e facebook-ut" style="float: right;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; facebook</p>
       <p id="test1" style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo &euml;sht&euml; logo e twitter-ut" style="float: left;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; twitter</p>
       <button id="btn1">Set Text</button>
+      <button id="btn2">Gjej fjalen PROSIG</button>
+      <button onclick="myFunction()">A ekziston shkronja &euml;</button>
+      <p id="testmetod"></p>
       <script>
 $(document).ready(function(){
   $("#btn1").click(function(){
     $("#test1").text("Permbajtja e tesktit u ndryshua");
   });
 });
+
+$(document).ready(function(){
+  $("#btn2").click(function(){
+    $(".gjej").append(" <b>PROSIG</b>.");
+  });
+});
+
+function myFunction() {
+  var str = "Këtu ekziston shkronja &euml;";
+  var patt = new RegExp("&euml;");
+  var res = patt.test(str);
+  document.getElementById("testmetod").innerHTML = res;
+}
       </script>
       <div id="paraqit">Klikoni per te rreshqitur posht kete panel</div>
      <div id="paneli">PROSIG</div>
