--- a/animacionet.html
+++ b/animacionet.html
@@ -127,8 +127,12 @@
       <p id="test1" style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo &euml;sht&euml; logo e twitter-ut" style="float: left;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; twitter</p>
       <button id="btn1">Set Text</button>
       <button id="btn2">Gjej fjalen PROSIG</button>
-      <button onclick="myFunction()">A ekziston shkronja &euml;</button>
+      <button onclick="regExp()">A ekziston shkronja &euml;</button>
+      <button onclick="Exec()">Gjetja e shkronjes &euml;</button>
+      <button onclick="Ora()">Shfaqni oren e sakte</button>
       <p id="testmetod"></p>
+      <p id="exec"></p>
+      <p id="ora"></p>
       <script>
 $(document).ready(function(){
   $("#btn1").click(function(){
@@ -142,22 +146,45 @@ $(document).ready(function(){
   });
 });
 
-function myFunction() {
+function regExp() {
   var str = "Këtu ekziston shkronja &euml;";
   var patt = new RegExp("&euml;");
   var res = patt.test(str);
   document.getElementById("testmetod").innerHTML = res;
+}
+
+function Exec() {
+  var str = "Shkronja &euml; gjendet ketu";
+  var patt = new RegExp("&euml;");
+  var res = patt.exec(str);
+  document.getElementById("exec").innerHTML = res;
+}
+
+function addZero(i) {
+  if (i < 10) {
+    i = "0" + i;
+  }
+  return i;
+}
+
+function Ora() {
+  var d = new Date();
+  var x = document.getElementById("ora");
+  var h = addZero(d.getHours());
+  var m = addZero(d.getMinutes());
+  var s = addZero(d.getSeconds());
+  x.innerHTML = h + ":" + m + ":" + s;
 }
       </script>
       <div id="paraqit">Klikoni per te rreshqitur posht kete panel</div>
      <div id="paneli">PROSIG</div>
              <br>
             <div style="height: 70px;width:1330px;position:absolute;margin-left: 10px;background-color:whitesmoke;border: dotted black 1px;">
-            <div id="animate_div" style="height: 70px;width:70px;position:absolute;margin-left: 0px;background-color: black;">
+            <div id="animate_div" style="height: 70px;width:70px;position:absolute;margin-left: 0px;background-color: #a2cce8;">
             </div>
             </div>
      <br /><br><br><br>
-            <button id="move_left" style="margin-left:20px;margin-top:5px;background-color: black;color:white;">Move!</button>
+     <button id="move_left" style="margin-left:20px;margin-top:5px;background-color: #a2cce8; color:white;">Move!</button>
             <script>
                 $(document).ready(function(){
                    $("#move_left").click(function(){
