--- a/animacionet.html
+++ b/animacionet.html
@@ -85,6 +85,19 @@ function drop(ev) {
 }
 </script>
 
+  <script>
+        document.writeln("<table>");
+        
+        for(var i=1; i<=4; i++)
+        {
+            document.writeln("<tr>");
+            for(var j=1; j<=5; j++)
+                document.writeln("<td>(" +i+ "," +j+ ")</td>" );
+            document.writeln("</tr>");
+        }  //end for
+        document.writeln("</table>");
+        </script>
+
   <h3 style="text-align:center; padding-top: 30px;">Fakte t&euml; rend&euml;sishme rreth nesh!</h3>
   <div class="divcss3">
             Kompania e Sigurimeve "PROSIG" &euml;sht&euml; themeluar n&euml; mars t&euml; vitit 2010.
