--- a/animacionet.html
+++ b/animacionet.html
@@ -34,7 +34,7 @@
         </style>
     </head>
     <body style="background-color: #e4dcf9">
-            <h1 style="text-align: center;">Ketu do te paraqesim disa animacione</h1>
+            <h1 style="text-align: center;  text-shadow: 3px 2px red;">Ketu do te paraqesim disa animacione</h1>
          <div style="height: 220px; width: 100%;">
 <svg width="300" height="205">
   <polygon points="100,10 40,198 190,78 10,78 160,198"
@@ -61,7 +61,7 @@
             <button onclick="nderrimiTekstit()">Ndrysho tekstin</button>
             <h4 id="ndrrimteksti" style="color:white;background-color: #001313;">Harta e lokacionit</h4>
         
-            <p>Klikoni butonin p&euml;r t&euml; par&euml; koordinatat e lokacionit tuaj.</p>
+            <p style="text-transform: capitalize;">Klikoni butonin p&euml;r t&euml; par&euml; koordinatat e lokacionit tuaj.</p>
 
 <button onclick="getLocation()">Butoni</button>
 <p id="demo"></p>
@@ -98,7 +98,7 @@ function drop(ev) {
         document.writeln("</table>");
         </script>
 
-  <h3 style="text-align:center; padding-top: 30px;">Fakte t&euml; rend&euml;sishme rreth nesh!</h3>
+  <h3 style="text-align:center; padding-top: 30px; text-shadow: 3px 2px blue;">Fakte t&euml; rend&euml;sishme rreth nesh!</h3>
   <div class="divcss3">
             Kompania e Sigurimeve "PROSIG" &euml;sht&euml; themeluar n&euml; mars t&euml; vitit 2010.
             Periudha e dyt&euml; tremujore e vitit 2010 ka qen&euml; periudha fillestare 
