--- a/animacionet.html
+++ b/animacionet.html
@@ -6,6 +6,9 @@
         <script src="jquery-3.3.1.min.js"></script>
         <style>
             .divcss3{
+                color: white;
+                background-color: #545454;
+                background-image: url("foto/rain.gif");
                 column-count: 4;
                 column-gap: 3px;
                 column-rule: 1px red outset;
@@ -33,7 +36,7 @@
             }
         </style>
     </head>
-    <body style="background-color: #e4dcf9">
+    <body style="background-color: #d8e8f2 ">
             <h1 style="text-align: center;  text-shadow: 3px 2px red;">Ketu do te paraqesim disa animacione</h1>
          <div style="height: 220px; width: 100%;">
 <svg width="300" height="205">
