--- a/rrethnesh2.html
+++ b/rrethnesh2.html
@@ -61,11 +61,25 @@
                         <li>Sigurime te femijes tuaj</li>
                         <li>Sigurime te kompanise suaj</li>
                     </ol>
-                <br>
-                <p>“PROSIG” po e vazhdon tradit&euml;n duke qen&euml; nj&euml;ra
-                    nga sht&euml;pit&euml; m&euml; t&euml; respektuara n&euml; fush&euml;n e sigurimeve 
-                    dhe me imazhin e ruajtur te klient&euml;t dhe qytetar&euml;t e Kosov&euml;s,
-                    si nj&euml; partner dhe sigurues i denj&euml;.</p>
+                    <br>
+                <h4><mark>Vleresoni faqen tone nga numri 1 deri ne 10</mark></h4>
+                <input id="hyrja">
+                <button type="button" onclick="Validimi()">Submit</button>
+                <p id="dalja"></p>
+                <script>
+                function Validimi() {
+                var x, text;
+
+                x = document.getElementById("hyrja").value;
+  
+                if (isNaN(x) || x < 1 || x > 10) {
+                text = "Vlera e dhene nuk eshte valide";
+                } else {
+                text = "Vlera e dhene eshte valide";
+                }
+                document.getElementById("dalja").innerHTML = text;
+                }
+                </script>
                 
                 </div></div>
         </div>
