--- a/animacionet.html
+++ b/animacionet.html
@@ -290,7 +290,14 @@ function Ora() {
                     background-color:pink;
                 }
             </style>
-            
+             <div style="display: inline;">
+            <div>
+        <form id="forma1" oninput="x.value=parseInt(a.value)+parseInt(b.value)" style="float:left;margin-left:80px;">0
+               <input type="range" id="a" value="0" min="0" max="100" step="5">100
+               + 0<input type="range" id="b" value="0" min="0" max="100" step="1">100
+               = <output id="x" for="a b"></output>
+                <p>K&euml;tu siper mund t&euml; llogaritni shum&euml;n dy sigurimeve t&euml; kompanis&euml;</p>
+        </form>
     </body>
     <script>
 var x = document.getElementById("demo");
