--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p id=text1">Sigurimi i shtepise tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>
+                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>
             </div>
                 </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
@@ -83,7 +83,7 @@
              <p id="text1">Sigurimi i femijes tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
-                 <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>          
+                 <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>          
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
@@ -92,7 +92,7 @@
             <p id="text1">Sigurimi i spitalit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>          
+                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>          
             </div>
         </div>
             </td>
@@ -106,7 +106,7 @@
             <p id="text1">Sigurimi i vetures tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>         
+                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>         
             </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
@@ -115,7 +115,7 @@
              <p id="text1">Sigurimi i kamionit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>           
+                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>           
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
@@ -124,7 +124,7 @@
              <p id="text1">Sigurimi i vendit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Login to read more &raquo;</a></p>           
+                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>           
              </div>
         </div>
             </td> 
