--- a/animacionet.html
+++ b/animacionet.html
@@ -5,6 +5,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="jquery-3.3.1.min.js"></script>
         <style>
+             html, body {height:100%;}
+             html {display:table; width:100%;}
+             body {display:table-cell; text-align:center; vertical-align:middle;}
             .divcss3{
                 color: white;
                 background-color: #545454;
