--- a/kontakti.html
+++ b/kontakti.html
@@ -92,7 +92,9 @@
                     Shfletuesi i juaj nuk e perkrah elementin video!
                 </video>
             </div>
-    
+        <div class="rright1">
+        <h5 align="center"><a href="animacionet.html" target="_blank">Kliko ketu per te pare me shume animacione</a></h5>
+        <div>
     <div class="fdiv">
  <div class="fdiv1">
      <br>
