--- a/kontakti.html
+++ b/kontakti.html
@@ -94,7 +94,9 @@
             </div>
         <div class="rright1">
         <h5 align="center"><a href="animacionet.html" target="_blank">Kliko ketu per te pare me shume animacione</a></h5>
-        <div>
+        </div>
+        </div>
+    </div>
     <div class="fdiv">
  <div class="fdiv1">
      <br>
