--- a/kontakti.html
+++ b/kontakti.html
@@ -93,7 +93,8 @@
                 </video>
             </div>
         <div class="rright1">
-        <h5 align="center"><a href="animacionet.html" target="_blank">Kliko ketu per te pare me shume animacione</a></h5>
+        <br><br><br><br><br><br><br>
+        <a href="animacionet.html" target="_blank"><img src="foto/k.png" height="430px" width="620px" alt="Kamera">
         </div>
         </div>
     </div>
