--- a/animacionet.html
+++ b/animacionet.html
@@ -148,14 +148,15 @@ function drop(ev) {
             nj&euml; bashk&euml;punim tjet&euml;r me kompanin&euml; e sigurimit "MONDIAL Assistance Group", kompani
             kjo pjes&euml; e elit&euml;s nd&euml;rkomb&euml;tare e specializuar n&euml; sfer&euml;n e sigurimeve.
         </div>
-   <ul style="font-size: 20px;">
+      <div style="width: 100px;"><ul style="font-size: 25px;">
       <li>Vendi</li>
-      <li>Harta
+      <li>Kosove
           <ul>
-              <li>Vendi i ndodhjes tuaj</li>
+              <li>PROSIG</li>
           </ul>
       </li>
-   </ul>
+      </ul>
+      </div>
         <p class="gjej" style="width: 300px;"><img src="foto/facebook_32.png" alt="Kjo &euml;sht&euml; logo e facebook-ut" style="float: right;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; facebook</p>
       <p id="test1" style="width: 300px;"><img src="foto/twitter_32.png" alt="Kjo &euml;sht&euml; logo e twitter-ut" style="float: left;">K&euml;tu klikoni p&euml;r t&euml; hyr&euml; n&euml; twitter</p>
       <button id="btn1">Set Text</button>
