--- a/kontakti.html
+++ b/kontakti.html
@@ -98,51 +98,55 @@
         </div>
         </div>
     </div>
-    <div class="fdiv">
+   <div class="fdiv">
  <div class="fdiv1">
      <br>
-     <h3 align="center" id="dh3">VENDET NE KOSOVE</h3>
-     <hr><br>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
+     <h3 align="center" id="dh3">Shtetet te cilat mund ti sigurojm&euml;</h3>
+     <hr>
+     <h5 align="center">Kosov&euml</h5>
+     <h5 align="center">Maqedoni</h5>
+     <h5 align="center">Mal t&euml zi</h5>
+     <h5 align="center">Shqip&eumlri</h5>
+     <h5 align="center">Kroaci</h5>
+     <h5 align="center">Bullgari</h5>
+     <h5 align="center">Zvic&euml;rr</h5>
  </div>
                
  <div class="fdiv1">
      <br>
-     <h3 align="center" id="dh3">VENDET NE KOSOVE</h3>
-     <hr><br>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
+     <h3 align="center" id="dh3">Qytetet n&euml t&euml cilat gjendemi </h3>
+     <hr>
+     <h5 align="center">Prishtin&euml</h5>
+     <h5 align="center">Shkup</h5>
+     <h5 align="center">Ulqin</h5>
+     <h5 align="center">Tiran&euml</h5>
+     <h5 align="center">Zagreb</h5>
+     <h5 align="center">Sofia</h5>
+     <h5 align="center">Gjenev&euml</h5>
  </div>
  <div class="fdiv1">
      <br>
-     <h3 align="center" id="dh3">VENDET NE KOSOVE</h3>
-     <hr><br>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
+     <h3 align="center" id="dh3">Rrug&eumlt n&euml; t&euml cilat gjendemi</h3>
+     <hr>
+     <h5 align="center">Agim Ramadani</h5>
+     <h5 align="center">Nikola Karev</h5>
+     <h5 align="center">Mehmet Gyli</h5>
+     <h5 align="center">Rruga Bardhok Biba</h5>
+     <h5 align="center">Vaska ul.</h5>
+     <h5 align="center">Histro Bodev</h5>
+     <h5 align="center">Rue Hornung</h5>
  </div>   
  <div class="fdiv1">
      <br>
-     <h3 align="center" id="dh3">VENDET NE KOSOVE</h3>
-     <hr><br>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
-     <h5 align="center">KOSOVE</h5>
+     <h3 align="center" id="dh3">Kodipostal</h3>
+     <hr>
+     <h5 align="center">10003</h5>
+     <h5 align="center">8545</h5>
+     <h5 align="center">3425</h5>
+     <h5 align="center">9875</h5>
+     <h5 align="center">2186</h5>
+     <h5 align="center">6891</h5>
+     <h5 align="center">4247</h5>
  </div>
  <br style="clear: left;" />
 </div>
