--- a/kontakti.html
+++ b/kontakti.html
@@ -151,7 +151,7 @@
  <br style="clear: left;" />
 </div>
     <a href="kontakti.html" id="back-to-top" style="display: block;">
-        <img src="https://www.scor.com/sites/all/themes/custom/customer/images/scroll-scor-VA.png" alt="back-to-top"></a>
+       <img src="foto/backtotop.png" alt="back-to-top"></a>
     <footer>
         Copyright &COPY; 2018 PROSIG - All Rights Reserved
     </footer>   
