--- a/faqet-tjera/kontakti.html
+++ b/faqet-tjera/kontakti.html
@@ -12,13 +12,13 @@
 <body>
     <header class="header">
     <div class="container">
-      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+      <img src="../foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
 
       <nav>
         <ul>
           <li> <a href="index.html">BALLINA</a></li>
-          <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="faqet-tjera/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="../faqet-tjera/produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="../faqet-tjera/shpalljeHTML/shpallje.html">SHPALLJE</a></li>
           <li> <a href="rrethnesh.html">RRETH NESH</a></li>
           <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
@@ -151,7 +151,7 @@
  <br style="clear: left;" />
 </div>
     <a href="kontakti.html" id="back-to-top" style="display: block;">
-       <img src="foto/backtotop.png" alt="back-to-top"></a>
+       <img src="../foto/backtotop.png" alt="back-to-top"></a>
     <footer>
         Copyright &COPY; 2018 PROSIG - All Rights Reserved
     </footer>   
