--- a/faqet-tjera/produktetsigurimeveHTML/produktetsigurimeve.html
+++ b/faqet-tjera/produktetsigurimeveHTML/produktetsigurimeve.html
@@ -86,8 +86,8 @@
           <li> <a href="../../index.html">BALLINA</a></li>
           <li> <a href="../produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
           <li> <a href="../shpalljeHTML/shpallje.html">SHPALLJE</a></li>
-          <li> <a href="../rrethneshHTML/rrethnesh.html">RRETH NESH</a></li>
-          <li><a href="../kontaktiHTML/kontakti.html">KONTAKTI</a></li>
+          <li> <a href="../rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="../kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
