--- a/faqet-tjera/rrethnesh1.html
+++ b/faqet-tjera/rrethnesh1.html
@@ -11,15 +11,15 @@
 <body>
   <header class="header">
     <div class="container">
-      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+      <img src="../foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
 
-      <nav>
+       <nav>
         <ul>
-          <li> <a href="index.html">BALLINA</a></li>
-          <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="faqet-tjera/shpallje.html">SHPALLJE</a></li>
-          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
-          <li><a href="kontakti.html">KONTAKTI</a></li>
+          <li> <a href="../index.html">BALLINA</a></li>
+          <li> <a href="../faqet-tjera/produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="../faqet-tjera/shpalljeHTML/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="../faqet-tjera/rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="../faqet-tjera/kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
