--- a/faqet-tjera/kontakti.html
+++ b/faqet-tjera/kontakti.html
@@ -16,7 +16,7 @@
 
       <nav>
         <ul>
-          <li> <a href="index.html">BALLINA</a></li>
+          <li> <a href="../index.html">BALLINA</a></li>
           <li> <a href="../faqet-tjera/produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
           <li> <a href="../faqet-tjera/shpalljeHTML/shpallje.html">SHPALLJE</a></li>
           <li> <a href="rrethnesh.html">RRETH NESH</a></li>
