lidhja e index.html

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <nav>
         <ul>
           <li> <a href="index.html">BALLINA</a></li>
-          <li> <a href="faqet-tjera/produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="faqet-tjera/shpalljeHTML/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="faqet-tjera/shpallje.html">SHPALLJE</a></li>
           <li> <a href="faqet-tjera/rrethnesh.html">RRETH NESH</a></li>
           <li><a href="faqet-tjera/kontakti.html">KONTAKTI</a></li>
         </ul>
