foto brenda faqet-tjera

--- a/faqet-tjera/afterlogin.html
+++ b/faqet-tjera/afterlogin.html
@@ -3,7 +3,7 @@
 <head>
     <title>Faqja Kryesore</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="afterlogin.css">
+    <link rel="stylesheet" type="text/css" href="CSS/afterlogin.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style>
     a {
