index.html perfundoi me lidhjet

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+      <img src="faqet-tjera/foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
 
       <nav>
         <ul>
@@ -38,9 +38,9 @@
      <div id="wrap">
             <div class="left">
                 <div style="width:90%;height : 165px;">
-                     <a href="https://www.facebook.com" ><img src="foto/rss-logo.png" height="100" width="115" title="Facebook" class="rrjetetSociale" id="rrjetetSociale1"></a>
-                     <a href="https://www.instagram.com" ><img src="foto/katrorlogo.jpg" height="100" width="115" title="Instagram" class="rrjetetSociale" id="rrjetetSociale2"></a>
-                     <a href="https://www.twitter.com" ><img src="foto/twitterlogo.jpg" height="100" width="115" title="Twitter" class="rrjetetSociale" id="rrjetetSociale3"></a>        
+                     <a href="https://www.facebook.com" ><img src="faqet-tjera/foto/rss-logo.png" height="100" width="115" title="Facebook" class="rrjetetSociale" id="rrjetetSociale1"></a>
+                     <a href="https://www.instagram.com" ><img src="faqet-tjera/foto/katrorlogo.jpg" height="100" width="115" title="Instagram" class="rrjetetSociale" id="rrjetetSociale2"></a>
+                     <a href="https://www.twitter.com" ><img src="faqet-tjera/foto/twitterlogo.jpg" height="100" width="115" title="Twitter" class="rrjetetSociale" id="rrjetetSociale3"></a>        
                 </div>
                 <div style="width:90%;height :90px;">       
                      <label align="left" style="color: #ffffff; opacity:0.4; font-size: 18px;margin: 15px 0px 0px 27px;">Subscribe Per Email:</label><br />
@@ -69,30 +69,30 @@
         <table bgcolor: #33302e; class="tabela" style="margin-left:-20px;"> 
             <td style="padding: 1px;">
                 <div class="gallery" style=" width: 400px ; height :500px;">
-                   <img src="foto/home.jpg" style="outline: 2px #999595 solid;">
+                   <img src="faqet-tjera/foto/home.jpg" style="outline: 2px #999595 solid;">
                    <div class="desc"> <h3>Sigurimi i Shtepisë</h3>
                 <p id=text1">Sigurimi i shtepise tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>
             </div>
                 </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
-            <img src="foto/baby.jpg" style="outline: 2px #999595 solid;">
+            <img src="faqet-tjera/foto/baby.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i Fëmijës tuaj</h3>
              <p id="text1">Sigurimi i femijes tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe në shtetet fqinje.</p>
-                 <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>          
+                 <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>          
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
-            <img src="foto/hospital.jpg" style="outline: 2px #999595 solid;">
+            <img src="faqet-tjera/foto/hospital.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i Spitalit</h3>
             <p id="text1">Sigurimi i spitalit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>          
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>          
             </div>
         </div>
             </td>
@@ -101,30 +101,30 @@
         <table class="tabela1" style="margin-left: -20px;">
             <td>
         <div class="gallery" style=" width: 400px ; height :500px;">
-            <img src="foto/mercedes.jpg" style="outline: 2px #999595 solid;">
+            <img src="faqet-tjera/foto/mercedes.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i Makines</h3>
             <p id="text1">Sigurimi i vetures tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>         
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>         
             </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
-            <img src="foto/truck.jpg" style="outline: 2px #999595 solid;">
+            <img src="faqet-tjera/foto/truck.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i Makinave të rënda</h3>
              <p id="text1">Sigurimi i kamionit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>           
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>           
              </div>
         </div>
         <div class="gallery" style=" width: 400px ; height :500px;">
-            <img src="foto/camera.jpg" style="outline: 2px #999595 solid;">
+            <img src="faqet-tjera/foto/camera.jpg" style="outline: 2px #999595 solid;">
             <div class="desc"> <h3>Sigurimi i Pronës tuaj</h3>
              <p id="text1">Sigurimi i vendit tuaj eshte nje pergjegjesi
                 e cila gjendet ne kompanine tone me qmimet me 
                 kualitative ne tregun tone, si dhe ne shtetet fqinje.</p>
-                <p style="text-align: right;"><a href="login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>           
+                <p style="text-align: right;"><a href="faqet-tjera/login.html">Per te lexuar me shume regjistrohu &raquo;</a></p>           
              </div>
         </div>
             </td> 
