--- a/faqet-tjera/shpallje.html
+++ b/faqet-tjera/shpallje.html
@@ -2,19 +2,19 @@
 <html manifest="shpallje.appcache">
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="../shpalljeCSS/shpallje.css">
+	<link rel="stylesheet" type="text/css" href="CSS/shpallje.css">
 </head>
 <body>
 	<header class="header">
     <div class="container">
-      <img src="../../foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px;">
+      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px;">
       <nav>
         <ul>
-          <li> <a href="../../index.html">BALLINA</a></li>
-          <li> <a href="../produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="../shpalljeHTML/shpallje.html">SHPALLJE</a></li>
-          <li> <a href="../rrethnesh.html">RRETH NESH</a></li>
-          <li><a href="../kontakti.html">KONTAKTI</a></li>
+          <li> <a href="../index.html">BALLINA</a></li>
+          <li> <a href="produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="shpalljeHTML/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
@@ -72,14 +72,14 @@
 		<h2 style="margin-left: 10px">Njihuni detajisht me shërbimet tona</h2>
 		<div class="works-area">
 			<div class="single-works">
-				<img src="../../foto/foto_1.jpg" style="height: 230px;">
+				<img src="foto/foto_1.jpg" style="height: 230px;">
 				<h4>Sigurimi i biznesit</h4>
-				<p style="font-size: 16px;">Zgjedhni sigurimin që ju nevojitet për biznesin tuaj<br> <a href="../lexoHTML/lexo1.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong>lexo më shumë >></strong></a></p>
+				<p style="font-size: 16px;">Zgjedhni sigurimin që ju nevojitet për biznesin tuaj<br> <a href="lexo1.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong>lexo më shumë >></strong></a></p>
 			</div>
 			<div class="single-works">
-				<img src="../../foto/foto_2.jpg" style="height: 230px;">
+				<img src="foto/foto_2.jpg" style="height: 230px;">
 				<h4>Udhëtimi im</h4>
-				<p style="font-size: 16px;">Sigurimi i shendetit ne udhetim<br> <a href="../lexoHTML/lexo2.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong>lexo më shumë >></strong></a></p>
+				<p style="font-size: 16px;">Sigurimi i shendetit ne udhetim<br> <a href="lexo2.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong>lexo më shumë >></strong></a></p>
 			</div>
 			<div class="single-works">
 				<script type="text/javascript">
@@ -97,15 +97,15 @@
 					if (today > 0 && today < 6)
 						{
 						if (startTime < now && endTime > now)
-							{document.write('<img src="../../foto/foto_3.jpg" style="height: 230px;">');}
+							{document.write('<img src="foto/foto_3.jpg" style="height: 230px;">');}
 						else
-							{document.write('<img src="../../foto/foto_6.jpeg" style="height: 230px;">');}
+							{document.write('<img src="foto/foto_6.jpeg" style="height: 230px;">');}
 						}
 					else
-						{document.write('<img src="../../foto/foto_8.jpg" style="height: 230px;">');}
+						{document.write('<img src="foto/foto_8.jpg" style="height: 230px;">');}
 				</script>
 				<h4>Shëndeti im</h4>
-				<p style="font-size: 16px;">Siguro shëndetin për çdo rast<br> <a href="../lexoHTML/lexo3.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong> lexo më shumë >></strong></a></p>
+				<p style="font-size: 16px;">Siguro shëndetin për çdo rast<br> <a href="lexo3.html" style="color: #d2514b;text-decoration: none;font-size: 16px;"> <strong> lexo më shumë >></strong></a></p>
 				
 			</div>
 		</div>		
