--- a/faqet-tjera/lexo3.html
+++ b/faqet-tjera/lexo3.html
@@ -3,7 +3,7 @@
 <head>
     <title>Per Ne</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../lexoCSS/lexo3.css">
+    <link rel="stylesheet" type="text/css" href="CSS/lexo3.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   
 </head>         
@@ -11,15 +11,15 @@
 <body>
   <header class="header">
     <div class="container">
-      <img src="../../foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
 
       <nav>
         <ul>
-          <li> <a href="../../index.html">BALLINA</a></li>
-          <li> <a href="../produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="../shpalljeHTML/shpallje.html">SHPALLJE</a></li>
-          <li> <a href="../rrethneshHTML/rrethnesh.html">RRETH NESH</a></li>
-          <li><a href="../kontaktiHTML/kontakti.html">KONTAKTI</a></li>
+          <li> <a href="../index.html">BALLINA</a></li>
+          <li> <a href="produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="shpallje.html">SHPALLJE</a></li>
+          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
@@ -28,10 +28,10 @@
    
     <section id="wrap">
         <nav class="left">
-            <p><a href="../rrethnesh.html" style="color: #68686c;">PER NE</a></p>
-            <p><a href="../rrethnesh1.html" style="color: #68686c;">MISIONI DHE VIZIONI</a></p>
-            <p><a href="../rrethnesh2.html" style="color: #68686c;">KUSH JEMI NE</a></p>
-            <p><a href="../kontakti.html" style="color: #68686c;">KONTAKTI</a></p>
+            <p><a href="rrethnesh.html" style="color: #68686c;">PER NE</a></p>
+            <p><a href="rrethnesh1.html" style="color: #68686c;">MISIONI DHE VIZIONI</a></p>
+            <p><a href="rrethnesh2.html" style="color: #68686c;">KUSH JEMI NE</a></p>
+            <p><a href="kontakti.html" style="color: #68686c;">KONTAKTI</a></p>
         </nav>
         <div class="right">
             <div class="center">
