--- a/faqet-tjera/produktetsigurimeve.html
+++ b/faqet-tjera/produktetsigurimeve.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Ushtrime</title>
-	<link rel="stylesheet" type="text/css" href="../produktetsigurimeveCSS/produktetsigurimeve.css">
-  <link rel="stylesheet" type="text/css" href="../produktetsigurimeveCSS/animacioni.css">
-  <link rel="stylesheet" type="text/css" href="../produktetsigurimeveCSS/produktetsigurimeve2.css">
+	<link rel="stylesheet" type="text/css" href="CSS/produktetsigurimeve.css">
+  <link rel="stylesheet" type="text/css" href="CSS/animacioni.css">
+  <link rel="stylesheet" type="text/css" href="CSS/produktetsigurimeve2.css">
 
 <style type="text/css">
   
@@ -80,14 +80,14 @@
 <body>
 	<header class="header">
     <div class="container">
-      <img src="../../foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px;">
+      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px;">
      <nav>
         <ul>
-          <li> <a href="../../index.html">BALLINA</a></li>
-          <li> <a href="../produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="../shpalljeHTML/shpallje.html">SHPALLJE</a></li>
-          <li> <a href="../rrethnesh.html">RRETH NESH</a></li>
-          <li><a href="../kontakti.html">KONTAKTI</a></li>
+          <li> <a href="../index.html">BALLINA</a></li>
+          <li> <a href="produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="shpalljeHTML/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
@@ -98,11 +98,11 @@
 
         <div id="slider">
             <figure>
-              <img src="../../foto/vetura.png">
-              <img src="../../foto/udhetime.jpg" style="height: 650px;">
-              <img src="../../foto/familja.jpg">
-              <img src="../../foto/puna.jpg" style="height: 600px;">
-              <img src="../../foto/vetura.png">
+              <img src="foto/vetura.png">
+              <img src="foto/udhetime.jpg" style="height: 650px;">
+              <img src="foto/familja.jpg">
+              <img src="foto/puna.jpg" style="height: 600px;">
+              <img src="foto/vetura.png">
             </figure>
          </div>
 
@@ -116,17 +116,17 @@
     <div class="wrapper">
 
                   <a href="#sigurimiV"> <div class="team-member">
-                    <img src="../../foto/foto1.png" alt="" height="188px;">
+                    <img src="foto/foto1.png" alt="" height="188px;">
                     <h3>Sigurim të veturave</h3>
                   </div></a>
 
                   <a href="#sigurimiP"><div class="team-member">
-                    <img src="../../foto/foto2.png" alt="" height="188px;">
+                    <img src="foto/foto2.png" alt="" height="188px;">
                     <h3>Sigurim të pronës</h3>   
                   </div></a>
 
                  <a href="#sigurimiSH"> <div class="team-member">
-                    <img src="../../foto/foto3.png" alt="" height="188px;">
+                    <img src="foto/foto3.png" alt="" height="188px;">
                     <h3>Sigurim shëndetësor</h3>
                   </div> </a>
     </div>
