--- a/faqet-tjera/produktetsigurimeve.html
+++ b/faqet-tjera/produktetsigurimeve.html
@@ -84,8 +84,8 @@
      <nav>
         <ul>
           <li> <a href="../index.html">BALLINA</a></li>
-          <li> <a href="produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="shpalljeHTML/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="shpallje.html">SHPALLJE</a></li>
           <li> <a href="rrethnesh.html">RRETH NESH</a></li>
           <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
