--- a/faqet-tjera/kontakti.html
+++ b/faqet-tjera/kontakti.html
@@ -3,7 +3,7 @@
 <head>
     <title>Kontakti</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="kontakti.css">
+    <link rel="stylesheet" type="text/css" href="CSS/kontakti.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="jquery-3.3.1.min.js"></script>
@@ -12,13 +12,13 @@
 <body>
     <header class="header">
     <div class="container">
-      <img src="../foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
 
       <nav>
         <ul>
           <li> <a href="../index.html">BALLINA</a></li>
-          <li> <a href="../faqet-tjera/produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="../faqet-tjera/shpalljeHTML/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="shpallje.html">SHPALLJE</a></li>
           <li> <a href="rrethnesh.html">RRETH NESH</a></li>
           <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
@@ -83,12 +83,12 @@
                     Shfletuesi i juaj nuk e perkrah elementin video!
                 </video>
                  <audio controls>
-                    <source src="Howtoinstallsecuritycamera.mp3" type="audio/mpeg">
+                    <source src="foto/Howtoinstallsecuritycamera.mp3" type="audio/mpeg">
                     Shfletuesi i juaj nuk e perkrah elementin auditor!
                 </audio>
                 <br>
                 <video width="360" height="280" style="outline: 2px #999595 solid;" controls>
-                    <source src="Howtoinstallsecuritycamera.mp4" type="video/mp4">
+                    <source src="foto/Howtoinstallsecuritycamera.mp4" type="video/mp4">
                     Shfletuesi i juaj nuk e perkrah elementin video!
                 </video>
             </div>
@@ -151,7 +151,7 @@
  <br style="clear: left;" />
 </div>
     <a href="kontakti.html" id="back-to-top" style="display: block;">
-       <img src="../foto/backtotop.png" alt="back-to-top"></a>
+       <img src="foto/backtotop.png" alt="back-to-top"></a>
     <footer>
         Copyright &COPY; 2018 PROSIG - All Rights Reserved
     </footer>   
