--- a/faqet-tjera/login.html
+++ b/faqet-tjera/login.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>PROSIG</title>
-	<link rel="stylesheet" href="login.css" type="text/css">
+	<link rel="stylesheet" href="CSS/login.css" type="text/css">
 </head>
 <body>
 	<div id="container">
@@ -30,7 +30,7 @@
 			<br>
 			<input id="loginBtn" type="submit" class="button" value="Login" autofocus><br><br>	
 			
-			<a href="index.html">Continue without logging in...</a><br>
+			<a href="../index.html">Continue without logging in...</a><br>
 			<a href="https://accounts.google.com/signup/v2/webcreateaccount?service=mail&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ltmpl=default&flowName=GlifWebSignIn&flowEntry=SignUp">Sign Up</a>
 		</form>
 	</div>
