--- a/faqet-tjera/afterlogin.html
+++ b/faqet-tjera/afterlogin.html
@@ -24,9 +24,9 @@
 
       <nav>
         <ul>
-          <li> <a href="index.html">BALLINA</a></li>
-          <li> <a href="faqet-tjera/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="faqet-tjera/shpallje.html">SHPALLJE</a></li>
+          <li> <a href="../index.html">BALLINA</a></li>
+          <li> <a href="produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="shpallje.html">SHPALLJE</a></li>
           <li> <a href="rrethnesh.html">RRETH NESH</a></li>
           <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
