--- a/faqet-tjera/rrethnesh2.html
+++ b/faqet-tjera/rrethnesh2.html
@@ -3,7 +3,7 @@
 <head>
     <title>Kush jemi ne</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="rrethnesh.css">
+    <link rel="stylesheet" type="text/css" href="CSS/rrethnesh.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   
 </head>         
@@ -11,15 +11,15 @@
 <body>
   <header class="header">
     <div class="container">
-      <img src="../foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
+      <img src="foto/logo3.png" alt="logoja" class="logo1" style=" height:120px; width: 260px">
 
       <nav>
         <ul>
           <li> <a href="../index.html">BALLINA</a></li>
-          <li> <a href="../faqet-tjera/produktetsigurimeveHTML/produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
-          <li> <a href="../faqet-tjera/shpalljeHTML/shpallje.html">SHPALLJE</a></li>
-          <li> <a href="../faqet-tjera/rrethnesh.html">RRETH NESH</a></li>
-          <li><a href="../faqet-tjera/kontakti.html">KONTAKTI</a></li>
+          <li> <a href="produktetsigurimeve.html">PRODUKTET E SIGURIMEVE</a></li>
+          <li> <a href="shpallje.html">SHPALLJE</a></li>
+          <li> <a href="rrethnesh.html">RRETH NESH</a></li>
+          <li><a href="kontakti.html">KONTAKTI</a></li>
         </ul>
       </nav>
    </div>
