--- a/faqet-tjera/shpallje.html
+++ b/faqet-tjera/shpallje.html
@@ -143,7 +143,7 @@
 					<h2>Email-at</h2>
 					<p>kastrioti_d@live.com</p>
 					<p>majlindajaha@hotmail.com</p>
-					<p>gentritveliu@hotmail.com</p>
+					<p>gentianveliu@hotmail.com</p>
 	     	</div>
 		    <div class="single-footer">
 					<h2>about us</h2>
